# inkling

./: .gitignore  CLEAN_ROOM.md  README.md  index.html  package.json  plan.md  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: selection-bridge-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/selection-bridge/: main.swift  selection-bridge
src-tauri/src/: identity.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: ai.rs  library.rs  mod.rs  selection.rs  settings.rs  windowing.rs
src/pages/: ActionBar.tsx  Library.tsx  Result.tsx  Settings.tsx
src/pages/actionbar/: AskPanel.tsx  DockIcon.tsx  ResultPanel.tsx  actions.tsx  aiClient.ts  constants.ts  icons.tsx  libraryPersistence.ts  nativeActions.ts  selection.ts  state.ts  styles.ts  types.ts  useActionbarActions.ts  useActionbarWindow.ts  useDockHover.ts
src/services/: db.ts  libraryEvents.ts
